src/components/ProjectDetailCard/ProjectDetailCard.css
.details_card {
  width: 80%;
  padding: 2rem;
  margin-top: 3rem;
  border-radius: 0px;
  box-shadow: 6px 7px 4px -6px rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.062);
  display: flex;
  flex-direction: column;
  min-height: 40vh;
  background-color: #FFF;
  z-index: 1;
}


.titleBox {
  display: flex;
  align-items: center;
  justify-content: space-between;
}


.like-share span{
  font-size:20px;
  padding-bottom:10rem;
  transition: all 0.3s;
}

.heart{
  font-size:40px;
  transition: all 0.3s;
  cursor:pointer;
  color:#CCC;
}

.heart:hover{
  color:red;
  transform : scale(1.25);
}

.liked-heart{
  color:red;
}


.share-icon {
  width: 25px;
  height: 25px;
  margin-left:25px;
}

.title_ {
  text-decoration: underline;
  font-weight: 800;
}


.level_ {
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

.skills_ {
  display: flex;
  margin-right:auto;
}

.like_label_{
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  margin-top:0rem;
  margin-right:0.8rem;
}


.rate_label_{
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  margin-top:0.3rem;
  margin-right:0.8rem;
}


.card-footer_ {
  display: flex;
  flex-direction:column;
}

.rating_div {
  margin:0;
  margin-left:auto;
  margin-top:0.8rem;
  display:flex;
  flex-wrap:wrap;
}

.adder_div{
  margin-top:0.8rem;
  margin-right:auto;
  display: flex;
  flex-wrap : wrap;
}

.adder_div h2{
  font-size:18px;
  color: #6f6ee1;
  margin:0;
  margin-left:-5px;
  margin-right:5px;
  font-weight: bold;
  font-family: "Poppins";
}

.desc_card{
  width: 80%;
  padding: 2rem;
  margin-top: 1rem;
  border-radius: 0px;
  box-shadow: 6px 7px 4px -6px rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.062);
  height: auto;
  background-color: #FFF;
  z-index: 1;
}

.desc_label{
  margin-bottom:2rem;
}

